Navbar : fixed flag height on mobile

--- a/src/scss/Navbar.scss
+++ b/src/scss/Navbar.scss
@@ -62,8 +62,8 @@ nav {
 					img {
 						min-width: 9vw;
 						width: 9vw;
-						min-height: 8vw;
-						height: 8vw;
+						min-height: 6vw;
+						height: 6vw;
 					}
 				}
 			}
